# fonds_pod

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Contribute.zh.md  Development_Plan.md  Document.md  README.md  README.zh.md  Software_Requirements_Specification.md  build.rs  build_error.txt  build_output.txt  cliff.toml  diesel.toml  error.txt  messages.mo  messages.po  output.txt  resources.rc  test_output.txt  test_output2.txt
.github/workflows/: release.yml
docs/: INTERNATIONALIZATION.md
fonds_classifications/: fonds_classifications_GBT15418-94.json  fonds_classifications_default.json  fonds_classifications_default_en.json
migrations/2025-12-05-000000_add_created_at_to_schemas_and_schema_items/: down.sql  up.sql
migrations/2025-12-05-000001_add_id_to_fond_classifications/: down.sql  up.sql
migrations/2025-12-08-000002_add_sort_order_to_fond_classifications/: down.sql  up.sql
migrations/2025-12-08-000003_add_id_to_business_tables/: down.sql  up.sql
migrations/2025-12-16-000004_add_fk_ids_to_series_files_items/: down.sql  up.sql
migrations/2025-12-16-000005_remove_no_fields/: down.sql  up.sql
migrations/2025-12-16-000006_add_file_no_and_path_to_files/: down.sql  up.sql
migrations/2025-12-16-000007_add_series_no_and_item_no_fields/: down.sql  up.sql
src/: app.rs  app_init.rs  lib.rs  main.rs  tray_init.rs  ui_callbacks.rs
tests/: fond_classification_repository_test.rs  fond_vm_test.rs  persistence_test.rs  schema_repository_test.rs
ui/: app-window.slint  components.slint  crud-list.slint  dialogs.slint  models.slint  theme.slint  translations.slint
(+84 files in other folders)
