[package]
name = "fonds-pod"
version = "0.1.0"
edition = "2021"

# 使用下划线替代连字符，避免 WiX MSI 打包时的 KeyPath 错误
[[bin]]
name = "fonds_pod"
path = "src/main.rs"

[package.metadata.bundle]
name = "Fonds Pod"
identifier = "wiki.martis.fonds-pod"
version = "0.1.0"
copyright = "Copyright (c) 2025 Sudiaty"
category = "Productivity"
short_description = "Fonds management application"
long_description = "A desktop application for managing fonds using Slint UI"

[package.metadata.bundle.windows]
certificate = ""

[package.metadata.bundle.windows.wix]
license = "LICENSE"
eula = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.14.1", features = [
    "gettext",
    "std"
]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rfd = "0.14"
diesel = { version = "2.1", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
libsqlite3-sys = { version = ">=0.17.2, <0.30.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.12"
log = "0.4"
tray-item = "0.10"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.4"

[build-dependencies]
slint-build = "1.14.1"

